ARM32: Jtreg test compiler/c2/Test8062950.java fails on ARM

XMLWordPrintable

    • b25
    • arm
    • linux

        Two assertion failures:

        "registers must be different" assertion failure in MacroAssembler::atomic_cas_bool. Caused by LR being reused as a temporary.

        dhw->is_neutral() assertion failure in ObjectSynchronizer::fast_exit caused by MacroAssembler::fast_lock on ARM32 not respecting correct biased locking protocol.

              Assignee:
              Ningsheng Jian (Inactive)
              Reporter:
              Ningsheng Jian (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: