8214512: ARM32: Jtreg test compiler/c2/Test8062950.java fails on ARM

Reviewed-by: dlong, enevill, bulasevich